# unity-scope-mediascanner

./: CMakeLists.txt  config.h.in
cmake/: ClickBuild.cmake  ClickScope.cmake  Intltool.cmake
data/: CMakeLists.txt  mediascanner-music.ini.in  mediascanner-music.ini.in.in  mediascanner-video.ini.in  mediascanner-video.ini.in.in  music-hollywood.scope.in  musicaggregator-settings.ini.in.in  musicaggregator.ini.in  musicaggregator.ini.in.in  unity-scope-hollywood.service.in  unity-scope-mediascanner.service.in  video-hollywood.scope.in  videoaggregator-settings.ini.in.in  videoaggregator.ini.in  videoaggregator.ini.in.in
data/music/: mediascanner.scope.in
data/video/: hollywood.scope.in  mediascanner.scope.in
debian/: changelog  control  copyright  rules  unity-scope-mediascanner.install  unity-scope-mediascanner2.install
oldscope/: CMakeLists.txt  base-scope.cpp  main.cpp  music-scope.cpp  scope.h  video-scope.cpp
po/: CMakeLists.txt  am.po  ar.po  ast.po  az.po  be.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  gd.po  gl.po  he.po  hr.po  hu.po  ia.po  id.po  is.po  it.po  ja.po  km.po  ko.po  ku.po  lv.po  ms.po  my.po  nb.po  (+22 more)
src/: CMakeLists.txt  Makefile  base-scope.c  bufferedresultforwarder.cpp  bufferedresultforwarder.h  categoryadder.cpp  categoryadder.h  config.h.in  i18n.h  main.c  main.cpp  music-scope.c  music-scope.cpp  music-scope.h  musicaggregatorquery.cpp  musicaggregatorquery.h  musicaggregatorscope.cpp  musicaggregatorscope.h  notify-strategy.cpp  notify-strategy.h  onlinemusicresultforwarder.cpp  onlinemusicresultforwarder.h  resultforwarder.cpp  resultforwarder.h  scope.h  video-scope.c  video-scope.cpp  video-scope.h  videoaggregatorquery.cpp  videoaggregatorquery.h  videoaggregatorscope.cpp  videoaggregatorscope.h
src/musicaggregator/: CMakeLists.txt  manifest.json.in  musicaggregator-settings.ini.in  musicaggregator.ini.in  musicaggregatorquery.cpp  musicaggregatorquery.h  musicaggregatorscope.cpp  musicaggregatorscope.h  onlinemusicresultforwarder.cpp  onlinemusicresultforwarder.h
src/mymusic/: CMakeLists.txt  apparmor.json  manifest.json.in  mediascanner-music.ini.in  music-scope.cpp  music-scope.h
src/myvideos/: CMakeLists.txt  manifest.json.in  mediascanner-video.ini.in  video-scope.cpp  video-scope.h
src/utils/: CMakeLists.txt  bufferedresultforwarder.cpp  bufferedresultforwarder.h  i18n.cpp  i18n.h  notify-strategy.h  utils.cpp  utils.h
src/videoaggregator/: CMakeLists.txt  manifest.json.in  videoaggregator-settings.ini.in  videoaggregator.ini.in  videoaggregatorquery.cpp  videoaggregatorquery.h  videoaggregatorscope.cpp  videoaggregatorscope.h
tests/: CMakeLists.txt  test-music-aggregator.cpp  test-music-scope.cpp  test-old-scope.cpp  test-result-forwarder.cpp  test-scope.c  test-scope.cpp  test-video-scope.cpp  test-with-mediascanner.py  utils.c  utils.cpp  utils.h
tests/media/: video1.ogv
